k8s/api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: milal-api
spec:
  containers:
    - name: node
      image: tlsskfk/milal-api:v1.1.2
