k8s/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: milal-client
spec:
  containers:
    - name: react-app
      image: tlsskfk/milal-client:v1
