k8s/mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: milal-mysql
  labels:
    app: milal-mysql
spec:
  containers:
    - name: milal-mysql
      image: mysql:latest
      volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
  volumes:
    - name: mysql-volume
      persistentVolumeClaim:
        claimName: mysql-pvc
