k8s/secrets.yaml
apiVersion: v1  
kind: Pod 
metadata:
  name: milal-mysql-pod
spec:
  containers:
  - name: milal-mysql
    image: mysql
