k8s/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    app: milal-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
